<resources>
    <string name="app_name">To-do-List</string>
    <string name="정렬">정렬</string>
    <string name="등록일기준">등록일 기준</string>
    <string name="날짜기준">날짜 기준</string>
    <string name="완료된일정삭제">완료된 일정 지우기</string>
    <string name="검색">검색</string>
    <string name="등록">등록</string>
    <string name="오늘해야할일">오늘 해야 할 일</string>
    <string name="상세정보">상세정보</string>
    <string name="해야할일">해야할 일</string>
    <string name="해야할일기재">해야 할 일을 기재해주세요.</string>
    <string name="시간설정">시간 설정</string>
    <string name="_2003_05_06">2003.05.06</string>
    <string name="_00_00">00:00</string>
    <string name="취소">취소</string>
    <string name="완료">완료</string>
    <string name="text">Text</string>
</resources>