<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:title="@string/정렬">
        <menu>
            <item
                android:id="@+id/menu_sort_register"
                android:title="@string/등록일기준"/>
            <item
                android:id="@+id/menu_sort_date"
                android:title="@string/날짜기준"/>
        </menu>

    </item>
    <item
        android:id="@+id/menu_delete_done"
        android:title="@string/완료된일정삭제" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/검색"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />


</menu>