<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/상세정보"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/해야할일"

        app:layout_constraintTop_toBottomOf="@id/detail_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/detail_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/해야할일기재"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_text"
        android:layout_marginTop="8dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/detail_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/시간설정"
        app:layout_constraintTop_toBottomOf="@+id/detail_input"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/detail_todo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2003_05_06"
        app:layout_constraintTop_toBottomOf="@id/detail_time_text"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/detail_todo_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/detail_todo_date"
        app:layout_constraintTop_toTopOf="@id/detail_todo_date"
        android:text="@string/_00_00"
        android:textSize="28sp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/detail_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="32dp"
        android:text="@string/취소"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/detail_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="32dp"
        android:text="@string/완료"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>